# LockBook

./: .gitignore  .tauriignore  README.md  index.html  package-lock.json  package.json  sync-dist.sh
.github/workflows/: release.yml
.qwen/: settings.json
flatpak/: io.github.SnowTimSwiss.LockBook.desktop  io.github.SnowTimSwiss.LockBook.metainfo.xml  io.github.SnowTimSwiss.LockBook.yml
src/: emoji-data.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  main.rs
src-tauri/src/encryption/: mod.rs  temp.rs  timenc_cli.rs
src-tauri/src/journal/: entry.rs  mod.rs
