[package]
name = "lockbook"
version = "1.2.1"
description = "Lockbook – encrypted journal powered by TimENC"
authors = ["Lockbook"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
thiserror = "1.0"
dirs = "5.0"
zeroize = { version = "1.7", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = "s"
strip = true
